[Refactor] Optimize applicant and project query services for improved performance and clarity